// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <TestEnvironmentForm /> without throwing 1`] = `
.c3 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c18 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c4 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c19 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c5 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c20 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c15 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  background-image: none;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c15:focus {
  outline: 0;
  text-decoration: none;
}

.c15:hover {
  border: solid 0.0625rem;
}

.c15:active,
.c15:active:hover,
.c15:active:focus {
  background-image: none;
  outline: 0;
}

.c15[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c15 + button {
  margin-left: 1.25rem;
}

.c17 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  background-image: none;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c17:focus {
  outline: 0;
  text-decoration: none;
}

.c17:hover {
  border: solid 0.0625rem;
}

.c17:active,
.c17:active:hover,
.c17:active:focus {
  background-image: none;
  outline: 0;
}

.c17[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c17 + button {
  margin-left: 1.25rem;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c11 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c14 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c14:focus {
  outline: 0;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
  position: relative;
  height: auto;
  min-height: 7.875rem;
  margin-bottom: 0.625rem;
  border: 0.0625rem solid;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c6 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
  margin-bottom: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 0 0 0.8125rem 0;
}

.c9 {
  padding: 1.5rem 1.1875rem;
}

.c7 {
  height: 0.0625rem;
  margin: 0;
  margin-top: 2.125rem;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
  margin: 1.8125rem 0 3.75rem 0;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 500;
  font-size: 0.9375rem;
  margin-top: 2.125rem;
  margin-bottom: 0.1875rem;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin-top: 0.1875rem;
  margin-bottom: 1.25rem;
}

<form
  onSubmit={[Function]}
>
  <h3
    className="c0"
  >
    Global variables
  </h3>
  <p
    className="c1"
  >
    These variables are going to be availabe for interpolation in the manifest
  </p>
  <div
    className="c2"
  >
    <svg
      height="10"
      width="28"
    >
      <rect
        className="c3"
        height="6"
        width="6"
        x="2"
        y="2"
      />
      <rect
        className="c4"
        height="6"
        width="6"
        x="11"
        y="2"
      />
      <rect
        className="c5"
        height="6"
        width="6"
        x="20"
        y="2"
      />
    </svg>
    <p
      className="c6"
    >
      Loading...
    </p>
  </div>
  <div
    className="c7 c8"
  />
  <h3
    className="c0"
  >
    Enviroment files
  </h3>
  <p
    className="c1"
  >
    The variables from this files will be applied to the services that require them
  </p>
  <div>
    <div
      className="c9 c10"
      name="card"
    >
      <fieldset
        className="c11"
        style={undefined}
      >
        <div>
          <span
            className="c12"
          >
            <input
              className="c13 c14"
              id="cCyMsz"
              placeholder="Filename including extension…"
              type="text"
              value={undefined}
            />
          </span>
        </div>
      </fieldset>
      <div
        className="c2"
      >
        <svg
          height="10"
          width="28"
        >
          <rect
            className="c3"
            height="6"
            width="6"
            x="2"
            y="2"
          />
          <rect
            className="c4"
            height="6"
            width="6"
            x="11"
            y="2"
          />
          <rect
            className="c5"
            height="6"
            width="6"
            x="20"
            y="2"
          />
        </svg>
        <p
          className="c6"
        >
          Loading...
        </p>
      </div>
    </div>
    <button
      className="c15"
      onClick={[Function]}
      type="button"
    >
      Create new .env file
    </button>
  </div>
  <div
    className="c7 c8"
  />
  <div
    className="c16"
  >
    <button
      className="c15"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <button
      className="c17"
      disabled={true}
      type="submit"
    >
      <svg
        height="10"
        width="28"
      >
        <rect
          className="c18"
          height="6"
          width="6"
          x="2"
          y="2"
        />
        <rect
          className="c19"
          height="6"
          width="6"
          x="11"
          y="2"
        />
        <rect
          className="c20"
          height="6"
          width="6"
          x="20"
          y="2"
        />
      </svg>
    </button>
  </div>
</form>
`;

exports[`renders <TestEnvironmentForm /> without throwing 2`] = `
.c3 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c4 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c5 {
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c6 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
  margin-bottom: 0;
}

.c7 {
  height: 0.0625rem;
  margin: 0;
  margin-top: 2.125rem;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 500;
  font-size: 0.9375rem;
  margin-top: 2.125rem;
  margin-bottom: 0.1875rem;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin-top: 0.1875rem;
  margin-bottom: 1.25rem;
}

<form
  onSubmit={[Function]}
>
  <h3
    className="c0"
  >
    Global variables
  </h3>
  <p
    className="c1"
  >
    These variables are going to be availabe for interpolation in the manifest
  </p>
  <div
    className="c2"
  >
    <svg
      height="10"
      width="28"
    >
      <rect
        className="c3"
        height="6"
        width="6"
        x="2"
        y="2"
      />
      <rect
        className="c4"
        height="6"
        width="6"
        x="11"
        y="2"
      />
      <rect
        className="c5"
        height="6"
        width="6"
        x="20"
        y="2"
      />
    </svg>
    <p
      className="c6"
    >
      Loading...
    </p>
  </div>
  <div
    className="c7 c8"
  />
  <h3
    className="c0"
  >
    Enviroment files
  </h3>
  <p
    className="c1"
  >
    The variables from this files will be applied to the services that require them
  </p>
  <div />
</form>
`;
